lab3/k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:        
        - name: lab2
          image: ifilyaninitmo/itdt-contained-frontend:master
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 31000
      volumes:
      - name: nginx-configs
        configMap:
          name: example-configmap
